--- a/Airport.WebApi/ClientLight/Views/CrewsPage.xaml
+++ b/Airport.WebApi/ClientLight/Views/CrewsPage.xaml
@@ -1,14 +1,261 @@
 ﻿<Page
     x:Class="ClientLight.Views.CrewsPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ClientLight.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    xmlns:model="using:ClientLight.Model"
+    xmlns:views="using:ClientLight.Views"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:converters="using:ClientLight.Converters"
+    DataContext="{Binding CrewsViewModel, Source={StaticResource Locator}}"
+    mc:Ignorable="d">
 
-    <Grid>
+    <Page.Transitions>
+        <TransitionCollection>
+            <NavigationThemeTransition />
+        </TransitionCollection>
+    </Page.Transitions>
+    <Page.Resources>
+        <DataTemplate x:Key="MasterListViewItemTemplate" x:DataType="model:CrewDto">
+            <Grid Margin="12,12,12,12">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width = "Auto" />
+                    <ColumnDefinition Width = "Auto" />
+                    <ColumnDefinition Width = "Auto" />
+                </Grid.ColumnDefinitions>
 
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <TextBlock 
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Text="#" 
+                    FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+
+                <TextBlock 
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    Text="{x:Bind Id}" 
+                    FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+
+                <TextBlock 
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Text="Pilot:" 
+                    FontSize="16" FontWeight="SemiBold" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+
+                <TextBlock
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Opacity="0.6"
+                    Text="{x:Bind Pilot.Name}"
+                    FontSize="16" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+
+                <TextBlock
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    Opacity="0.6"
+                    Text="{x:Bind Pilot.FamilyName}"
+                    FontSize="16" FontWeight="Normal" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap"/>
+            </Grid>
+        </DataTemplate>
+        <converters:DateTimeConverter x:Key="DateTimeConverter" />
+    </Page.Resources>
+
+    <Grid x:Name="ContentArea"
+        Padding="12,0,12,0">
+
+        <Grid.RowDefinitions>
+            <RowDefinition x:Name="TitleRow" Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition x:Name="MasterColumn" Width="300" />
+            <ColumnDefinition x:Name="DetailColumn" Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <TextBlock
+            x:Name="TitlePage"
+            x:Uid="CustomerPage_Title"
+            Grid.ColumnSpan="2"
+            FontSize="28" FontWeight="SemiLight" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap" VerticalAlignment="Center"
+            Margin="0,0,12,7" Visibility="Collapsed"/>
+
+        <Grid
+            x:Name="MasterArea"
+            Grid.Row="1"
+            Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition x:Name="MasterRow" Height="48"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <TextBlock
+                x:Name="Title"
+                Text="{Binding Title, Mode=OneWay}"
+                x:Uid="CustomerPage_Title"
+                FontSize="28" FontWeight="SemiLight" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap" VerticalAlignment="Center"
+                Margin="0,0,12,7"/>
+
+            <!--The SystemControlPageBackgroundChromeLowBrush background represents where you should place your master content.-->
+            <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,4">
+                <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
+                        Command="{Binding AddEntityCommand}">
+                    <Grid>
+                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
+                        <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
+                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE710;" FontSize="8" Foreground="Red" />
+                        </Grid>
+                    </Grid>
+                </Button>
+                <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
+                        Command="{Binding DeleteEntityCommand}">
+                    <Grid>
+                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
+                        <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
+                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE738;" FontSize="8" Foreground="Red" />
+                        </Grid>
+                    </Grid>
+                </Button>
+                <Button Width="48" Height="48" BorderThickness="0" Background="Transparent" 
+                        Command="{Binding UpdateEntityCommand}">
+                    <Grid>
+                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77b;" FontSize="16"/>
+                        <Grid Background="White" Margin="16,16,0,0" Width="8" Height="8">
+                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE74e;" FontSize="8" Foreground="Red" />
+                        </Grid>
+                    </Grid>
+                </Button>
+            </StackPanel>
+            <ListView
+                x:Name="MasterListView"
+                Grid.Row="2"
+                ItemsSource="{Binding Entities, Mode=OneWay}"
+                SelectedItem="{Binding Selected, Mode=TwoWay}"
+                ItemContainerTransitions="{x:Null}"
+                ItemTemplate="{StaticResource MasterListViewItemTemplate}"
+                IsItemClickEnabled="True"
+                Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
+                <interactivity:Interaction.Behaviors>
+                    <core:EventTriggerBehavior EventName="ItemClick">
+                        <core:InvokeCommandAction Command="{Binding ItemClickCommand}" />
+                    </core:EventTriggerBehavior>
+                </interactivity:Interaction.Behaviors>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        <Setter Property="Padding" Value="0"/>
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
+        </Grid>
+
+        <Grid
+            x:Name="DetailContentPresenter"
+            Grid.Row="1"
+            Grid.Column="1"
+            Padding="24,0,0,0">
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="48"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock
+            x:Name="TitlePage2"
+            Text="{Binding Selected.Id, Mode=OneWay}"
+            FontSize="28" FontWeight="SemiLight" TextTrimming="CharacterEllipsis" 
+            TextWrapping="NoWrap" VerticalAlignment="Center"
+            Margin="0,0,12,7"/>
+
+                <ScrollViewer Grid.Row="1"
+            ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+            ScrollViewer.VerticalScrollBarVisibility="Auto"
+            ScrollViewer.VerticalScrollMode="Auto">
+
+                    <!--The SystemControlPageBackgroundChromeLowBrush background represents where you should place your detail content.-->
+                    <Grid Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
+
+                        <!--Replate FontIcon and TextBlock with your detail content.-->
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Id" VerticalAlignment="Center" Margin="10,0" Grid.Row="0" Grid.Column="0"/>
+                        <TextBlock Text="Name" VerticalAlignment="Center" Margin="10,0" Grid.Row="1" Grid.Column="0"/>
+                        <TextBlock Text="Life Time Years" VerticalAlignment="Center" Margin="10,0" Grid.Row="2" Grid.Column="0"/>
+                        <TextBlock Text="Plane Type Id" VerticalAlignment="Center" Margin="10,0" Grid.Row="3" Grid.Column="0"/>
+                        <TextBlock Text="Creation Date" VerticalAlignment="Center" Margin="10,0" Grid.Row="4" Grid.Column="0"/>
+
+                        <TextBlock Text="{Binding Selected.Id, Mode=OneWay}" 
+                         VerticalAlignment="Center" Margin="10,5" Grid.Row="0" Grid.Column="1"/>
+                        <TextBox Text="{Binding Selected.Name, Mode=TwoWay}" 
+                         VerticalAlignment="Center" Margin="10,5" Grid.Row="1" Grid.Column="1"/>
+                        <TextBox Text="{Binding Selected.LifeTimeAge.Years, Mode=TwoWay}" 
+                         VerticalAlignment="Center" Margin="10,5" Grid.Row="2" Grid.Column="1"/>
+                        <TextBox Text="{Binding Selected.PlaneType.Id, Mode=TwoWay}" 
+                                 VerticalAlignment="Center" Margin="10,5" Grid.Row="3" Grid.Column="1"/>
+                        <CalendarDatePicker Date="{Binding Selected.CreationDate, Mode=TwoWay, Converter={StaticResource DateTimeConverter}}"
+                                            VerticalAlignment="Center" Margin="10,5"
+                                            Grid.Row="4" Grid.Column="1"></CalendarDatePicker>
+                    </Grid>
+                </ScrollViewer>
+
+            </Grid>
+
+            <!--  Adaptive triggers  -->
+            <VisualStateManager.VisualStateGroups>
+                <VisualStateGroup x:Name="WindowStates">
+                    <interactivity:Interaction.Behaviors>
+                        <core:EventTriggerBehavior EventName="CurrentStateChanged">
+                            <core:InvokeCommandAction Command="{Binding StateChangedCommand}"/>
+                        </core:EventTriggerBehavior>
+                    </interactivity:Interaction.Behaviors>
+                    <VisualState x:Name="WideState">
+                        <VisualState.StateTriggers>
+                            <AdaptiveTrigger MinWindowWidth="640"/>
+                        </VisualState.StateTriggers>
+                        <VisualState.Setters>
+                            <Setter Target="ContentArea.Padding" Value="12,0,12,0"/>
+                            <Setter Target="MasterColumn.Width" Value="296" />
+                        </VisualState.Setters>
+                    </VisualState>
+                    <VisualState x:Name="NarrowState">
+                        <VisualState.StateTriggers>
+                            <AdaptiveTrigger MinWindowWidth="0" />
+                            <AdaptiveTrigger MinWindowWidth="0"/>
+                        </VisualState.StateTriggers>
+                        <VisualState.Setters>
+                            <Setter Target="TitlePage.Margin" Value="48,0,12,7"/>
+                            <Setter Target="TitleRow.Height" Value="48"/>
+                            <Setter Target="MasterRow.Height" Value="Auto"/>
+                            <Setter Target="TitlePage.Visibility" Value="Visible"/>
+                            <Setter Target="Title.Visibility" Value="Collapsed"/>
+                            <Setter Target="ContentArea.Padding" Value="12,0,12,0"/>
+                            <Setter Target="MasterColumn.Width" Value="*" />
+                            <Setter Target="DetailColumn.Width" Value="0" />
+                            <Setter Target="MasterListView.SelectionMode" Value="None" />
+                            <Setter Target="MasterArea.Background" Value="{ThemeResource SystemControlBackgroundAltHighBrush}"/>
+                            <Setter Target="MasterListView.Margin" Value="-12,0"/>
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>
+        </Grid>
     </Grid>
 </Page>
